# lab6

./: .gitignore  CMakeLists.txt  main
include/: big_int.h  maze.h  pos.h  random_robot.h  right_hand_rule_robot.h  robot.h  warper_robot.h
maps/: map1.txt  map2.txt  map4.txt  map5.txt  map6.txt
src/: big_int.cpp  main.cpp  maze.cpp  pos.cpp  random_robot.cpp  right_hand_rule_robot.cpp  robot.cpp  warper_robot.cpp
